crates/aven-check/tests/fixtures/check/valid/pick-omit-on-type-record.av
User = { name: Text, email: Text }

name_field : { name: Text } = pick(User, @{"name"})
email_field : { email: Text } = omit(User, @{"name"})
