crates/aven-check/tests/fixtures/check/invalid/comptime-tagsof-non-variant.av
User = { name: Text, email: Text }
Tags = tagsOf(User)
